Added chicken-alfredo.jpg, add ingreditents and directions to chicken-alfredo.html

--- a/recipes/chicken-alfredo.html
+++ b/recipes/chicken-alfredo.html
@@ -8,5 +8,21 @@
 </head>
 <body>
     <h1>Chicken Alfredo</h1>
+    <img src="../images/chicken-alfredo.jpg" alt="Homemade Chicken Alfredo">
+    <h3>Creamy Homemade Chicken Alfredo From Scratch</h3>
+    <p1>This delicious chicken alfredo is easy to make, and doesn't compromise 
+        on flavour. <br>After making this two-ingredient-sauce you will never go back
+        to store-bought alfredo sauce again.</p1>
+    <h4>Ingredients</h4>
+    <ul><li>One Cup Parmesan</li><li>One Cup Heavy Cream</li>
+        <li>One Box Linguine Noodles</li><li>One Pound Chicken ~Cubed</li></ul>
+    <h4>Directions</h4>
+    <ol>
+        <li>Boil Noodles</li>
+        <li>Pan Sear Chicken</li>
+        <li>Heat Heavy Cream</li>
+        <li>Stir-in Parmesan</li>
+        <li>Mix Ingredients</li>
+    </ol>
 </body>
 </html>
