--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
-    <h1>"Odin Recipes"</h1>
+    <h1>Odin Recipes</h1>
+    <a href="recipes/chicken-alfredo.html">Chicken Alfredo</a>
 </body>
 </html>
